--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,12 @@
         }
 
         .overlay {
-            position: fixed; /* Ändere von absolute auf fixed */
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%; /* Vollbild-Overlay */
-            background: rgba(0, 0, 0, 0.6); 
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
             z-index: 0;
         }
 
@@ -50,15 +50,6 @@
             text-align: center;
             font-size: 3em;
             margin-bottom: 50px;
-            background-color: transparent;
-        }
-
-        h2 {
-            text-align: center;
-            font-size: 3em;
-            margin-bottom: 50px;
-            background-color: transparent;
-            text-shadow: #ffbf00;
         }
 
         .projects-grid {
@@ -131,6 +122,9 @@
             z-index: 10;
             text-align: center;
             padding: 10px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
         }
 
         .nav-item {
@@ -146,6 +140,22 @@
             color: #ffbf00;
         }
 
+        /* Media Queries for smaller screens */
+        @media (max-width: 768px) {
+            .navigation {
+                flex-direction: column;
+            }
+
+            .nav-item {
+                margin: 10px 0;
+                display: block;
+                font-size: 1.2em;
+            }
+
+            .project-card {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -191,7 +201,7 @@
             <div class="project-card">
                 <img src="projekt3.jpg" alt="Projekt 3" class="project-image">
                 <h2 class="project-title">Mobile App</h2>
-                <p class="project-description">Diese App bietet maßgeschneiderte Lernpfade, die auf deine individuellen Ziele und Interessen abgestimmt sind. Mit interaktiven Kursen, Echtzeit-Feedback und fortschrittlicher Fortschrittsanalyse kannst du deine Lernziele effizient und zielgerichtet verfolgen. Entwickelt für Android</p>
+                <p class="project-description">Diese App bietet maßgeschneiderte Lernpfade, die auf deine individuellen Ziele und Interessen abgestimmt sind. Entwickelt für Android.</p>
                 <div class="project-info">
                     <span>Technologien: React Native, Firebase</span>
                     <span>2023</span>
@@ -201,7 +211,7 @@
             <div class="project-card">
                 <img src="projekt4.jpg" alt="Projekt 4" class="project-image">
                 <h2 class="project-title">Unternehmenswebsite</h2>
-                <p class="project-description">Eine voll funktionsfähige Website für ein modernes Unternehmen, die ihre Dienstleistungen hervorhebt und die Online-Präsenz optimiert. Der Fokus lag auf modernem Design und SEO.</p>
+                <p class="project-description">Eine voll funktionsfähige Website für ein modernes Unternehmen, die ihre Dienstleistungen hervorhebt und die Online-Präsenz optimiert.</p>
                 <div class="project-info">
                     <span>Technologien: WordPress, SEO</span>
                     <span>2022</span>
